applications/postgres/overlays/mgmt/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-postgres-access
  namespace: pg-01
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: pg-prod-cluster
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Allow from pods labeled 'app-client' in namespace 'app-namespace'
    - namespaceSelector:
        matchLabels:
          name: app-namespace
      podSelector:
        matchLabels:
          app-client: "true"
    # Allow from ESO pods to update Secrets
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: external-secrets
    ports:
    - protocol: TCP
      port: 5432
